--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <span class="navbar-toggler-icon"></span>  <!-- Nav Bar Toggler Icon-->
         </button>
 
-        <div class="collapse navbar-collapse col-xs-auto col-sm-auto col-md-5" id="navigation">  <!-- Nav Bar Collapse-->
-          <ul class="navbar-nav col-xs-auto col-sm-auto col-md-auto col-lg-auto" style="margin-left: 2rem;">  <!-- Unordered List Nav Items -->
+        <div class="collapse navbar-collapse col-xs-auto col-sm-auto col-md" id="navigation">  <!-- Nav Bar Collapse-->
+          <ul class="navbar-nav col-xs-auto col-sm-auto col-md-auto col-lg-auto" style="margin-left: 35rem;">  <!-- Unordered List Nav Items -->
             <li class="nav-item col-8 col-sm-10" style="padding-left: 2rem; left: 6rem;">  <!-- Nav Item -->
               <a class="nav-link ml-5 btn-lg" style="color: gold;" href="portfolio.html">Portfolio</a>  <!-- Nav link-->
             </li>
