--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,12 @@
           <span class="navbar-toggler-icon"></span>  <!-- Nav Bar Toggler Icon-->
         </button>
 
-        <div class="collapse navbar-collapse col-xs-auto col-sm-auto col-md-5" id="navigation">  <!-- Nav Bar Collapse-->
-          <ul class="navbar-nav col-xs-auto col-sm-auto col-md-auto col-lg-auto" style="margin-left: 20rem;">  <!-- Unordered List Nav Items -->
-            <li class="nav-item">  <!-- Nav Item -->
+        <div class="collapse navbar-collapse col-xs-auto col-sm-auto col-md" id="navigation">  <!-- Nav Bar Collapse-->
+          <ul class="navbar-nav col-xs-auto col-sm-auto col-md-auto col-lg-auto" style="margin-left: 35rem;">  <!-- Unordered List Nav Items -->
+            <li class="nav-item col-8 col-sm-10">  <!-- Nav Item -->
               <a class="nav-link ml-5 btn-lg" style="color: gold;" href="#">Portfolio</a>  <!-- Nav link-->
             </li>
-            <li class="nav-item">  <!-- Nav Item -->
+            <li class="nav-item col-8 col-sm-10">  <!-- Nav Item -->
               <a class="nav-link ml-5 btn-lg" style="color: gold;" href="" data-toggle="modal"
                 data-target="#contactModal">Contact me</a>  <!-- Nav Link -->
             </li>
