--- a/portfolio.html
+++ b/portfolio.html
@@ -220,10 +220,23 @@
               <p class="card-text">This project is called Natours and it is a practice website that I created however I am not claiming ownership that belongs to a developer named Jonas Schmedtmann it is a website that has HTML, CSS and Sass.</p>  <!-- Card Text -->
               <a class=" btn-link btn-lg" style="color: gold; background-image: linear-gradient(45deg, #323edd, #4d089a, purple)" href="https://mattk24.github.io/Natours/">Natours Project</a>
 
-            </div>
-          </div>
-        </div>
+            </div> <!-- Card Body -->
+          </div> <!-- Card -->
+           <div class="card mr-5" 
+          style="background-image: linear-gradient(45deg, gold, #323edd, #4d089a, purple);"> <!-- Card -->
+            <img class="card-img-top" src="img/Karaoke Keyboard.png" alt="Card image cap">  <!-- Image -->
+            <div class="card-body">  <!-- Card Body -->
+              <h5 class="card-title">Natours</h5>  <!-- Card Title -->
+              <p class="card-text">This project is called Natours and it is a practice website that I created however I am not claiming ownership that belongs to a developer named Jonas Schmedtmann it is a website that has HTML, CSS and Sass.</p>  <!-- Card Text -->
+              <a class=" btn-link btn-lg" style="color: gold; background-image: linear-gradient(45deg, #323edd, #4d089a, purple)" href="https://mattk24.github.io/Natours/">Natours Project</a>
+
+            </div> <!-- Card Body -->
+          </div> <!-- Card -->
+        </div> <!-- Card Group -->
     </div>  <!-- Container -->
+
+Karaoke Keyboard.png
+
   
   <script src="https://cdn.jsdelivr.net/npm/popper.js@2.0.0-next.4/dist/cjs/index.min.js" integrity="sha256-DJjQ1fIcjhzeeqviokQClKE5wcWh/40wC8G07qevU+c=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
