--- a/portfolio.html
+++ b/portfolio.html
@@ -226,9 +226,9 @@
           style="background-image: linear-gradient(45deg, gold, #323edd, #4d089a, purple);"> <!-- Card -->
             <img class="card-img-top" src="img/Karaoke Keyboard.png" alt="Card image cap">  <!-- Image -->
             <div class="card-body">  <!-- Card Body -->
-              <h5 class="card-title">Natours</h5>  <!-- Card Title -->
-              <p class="card-text">This project is called Natours and it is a practice website that I created however I am not claiming ownership that belongs to a developer named Jonas Schmedtmann it is a website that has HTML, CSS and Sass.</p>  <!-- Card Text -->
-              <a class=" btn-link btn-lg" style="color: gold; background-image: linear-gradient(45deg, #323edd, #4d089a, purple)" href="https://mattk24.github.io/Natours/">Natours Project</a>
+              <h5 class="card-title">Karaoke Keyboard</h5>  <!-- Card Title -->
+              <p class="card-text">I created this project with HTML, CSS, Javascript and Bootstrap it is an application that plays random songs with individual keys on your keyboard it is a very fun app and you are welcome to try it out for yourself.</p>  <!-- Card Text -->
+              <a class=" btn-link btn-lg" style="color: gold; background-image: linear-gradient(45deg, #323edd, #4d089a, purple)" href="https://mattk24.github.io/music-keyboard/">Karaoke Keyboard</a>
 
             </div> <!-- Card Body -->
           </div> <!-- Card -->
