--- a/portfolio.html
+++ b/portfolio.html
@@ -222,8 +222,7 @@
 
             </div> <!-- Card Body -->
           </div> <!-- Card -->
-           <div class="card mr-5" 
-          style="background-image: linear-gradient(45deg, gold, #323edd, #4d089a, purple);"> <!-- Card -->
+           <div class="card mr-5"style="background-image: linear-gradient(45deg, gold, #323edd, #4d089a, purple);"> <!-- Card -->
             <img class="card-img-top" src="img/Karaoke Keyboard.png" alt="Card image cap">  <!-- Image -->
             <div class="card-body">  <!-- Card Body -->
               <h5 class="card-title">Karaoke Keyboard</h5>  <!-- Card Title -->
@@ -232,11 +231,21 @@
 
             </div> <!-- Card Body -->
           </div> <!-- Card -->
+          
+           <div class="card mr-5"style="background-image: linear-gradient(45deg, gold, #323edd, #4d089a, purple);"> <!-- Card -->
+            <img class="card-img-top" src="img/Nucamp-website.png" alt="Card image cap">  <!-- Image -->
+            <div class="card-body">  <!-- Card Body -->
+              <h5 class="card-title">Nucamp Website</h5>  <!-- Card Title -->
+              <p class="card-text">I created this project with HTML, CSS, Javascript and Bootstrap it is an application that plays random songs with individual keys on your keyboard it is a very fun app and you are welcome to try it out for yourself.</p>  <!-- Card Text -->
+              <a class=" btn-link btn-lg" style="color: gold; background-image: linear-gradient(45deg, #323edd, #4d089a, purple)" href="https://mattk24.github.io/nucamp-site/">Nucampsite</a>
+
+            </div> <!-- Card Body -->
+          </div> <!-- Card -->
         </div> <!-- Card Group -->
     </div>  <!-- Container -->
 
  https://mattk24.github.io/nucamp-site/
- 
+ Nucamp-website.png
 
   
   <script src="https://cdn.jsdelivr.net/npm/popper.js@2.0.0-next.4/dist/cjs/index.min.js" integrity="sha256-DJjQ1fIcjhzeeqviokQClKE5wcWh/40wC8G07qevU+c=" crossorigin="anonymous"></script>
