--- a/portfolio.html
+++ b/portfolio.html
@@ -236,7 +236,7 @@
             <img class="card-img-top" src="img/Nucamp-website.png" alt="Card image cap">  <!-- Image -->
             <div class="card-body">  <!-- Card Body -->
               <h5 class="card-title">Nucamp Website</h5>  <!-- Card Title -->
-              <p class="card-text">I created this project with HTML, CSS, Javascript and Bootstrap it is an application that plays random songs with individual keys on your keyboard it is a very fun app and you are welcome to try it out for yourself.</p>  <!-- Card Text -->
+              <p class="card-text">This is a practice dummy website that I made while going through the nucamp bootcamp this is a website trademarked to Nucamp so I don't claim credit all credit goes to Nucamp this was created with HTML, CSS, Javascript, and Bootstrap.</p>  <!-- Card Text -->
               <a class=" btn-link btn-lg" style="color: gold; background-image: linear-gradient(45deg, #323edd, #4d089a, purple)" href="https://mattk24.github.io/nucamp-site/">Nucampsite</a>
 
             </div> <!-- Card Body -->
