--- a/index.html
+++ b/index.html
@@ -229,7 +229,13 @@
     </div>  <!-- Card Group -->
   </div>  <!-- Container -->
 
- 
+  <footer>
+    <h2> Find me on </h2>
+    <br/>
+    <a href="https://github.com/mattk24">Github</a>
+    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/">LinkedIn</a>
+    <a href="https://stackoverflow.com/users/12165413/matthew-koukios">Stackoverflow</a>
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha256-x3YZWtRjM8bJqf48dFAv/qmgL68SI4jqNWeSLMZaMGA=" crossorigin="anonymous"></script>
