--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   </div>  <!-- Container -->
 
   <footer>
-    <h2> Find me on </h2>
+    <h2 style="color: gold; margin-top: 4rem;"> Find me on </h2>
     <br/>
     <a href="https://github.com/mattk24">Github</a>
     <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/">LinkedIn</a>
