--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   <footer>
     <h2 style="color: gold; margin-top: 4rem;"> Find me on </h2>
     <br/>
-    <a href="https://github.com/mattk24"><i class="fab fa-4x-github"></i></a>
+    <a href="https://github.com/mattk24"><i class="fab fa-github fa-4x"></i></a>
     <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/">LinkedIn</a>
     <a href="https://stackoverflow.com/users/12165413/matthew-koukios">Stackoverflow</a>
   </footer>
