--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
     <h2 style="color: gold; margin-top: 3rem;"> Find me on </h2>
     <br/>
     <a href="https://github.com/mattk24"><i class="fab fa-github fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/">LinkedIn</a>
-    <a href="https://stackoverflow.com/users/12165413/matthew-koukios">Stackoverflow</a>
+    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/"><i class="fab fa-linkedin fa-2x"></i></a>
+    <a href="https://stackoverflow.com/users/12165413/matthew-koukios"><i class="fab fa-stack-overflow fa-2x"></i></a>
   </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
