--- a/index.html
+++ b/index.html
@@ -232,9 +232,12 @@
   <footer>
     <h2 style="color: gold; margin-top: 3rem;"> Find me on </h2>
     <br/>
-    <a href="https://github.com/mattk24"><i class="fab fa-github fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/"><i class="fab fa-linkedin fa-2x"></i></a>
-    <a href="https://stackoverflow.com/users/12165413/matthew-koukios"><i class="fab fa-stack-overflow fa-2x"></i></a>
+    <div class="fa-2x">
+     <a href="https://github.com/mattk24"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/"><i class="fab fa-linkedin"></i></a>
+    <a href="https://stackoverflow.com/users/12165413/matthew-koukios"><i class="fab fa-stack-overflow"></i></a>
+    </div>
+   
   </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
