--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
   <footer>
     <h2 style="color: gold; margin-top: 3rem;"> Find me on </h2>
     <br/>
-    <div class="fa-2x">
-     <a href="https://github.com/mattk24"><i class="fab fa-github"></i></a>
+    <div class="fa-2x ml-4">
+     <a href="https://github.com/mattk24"><i class="fab fa-github" style="--fa-primary-color: black; --fa-secondary-color: white;"></i></a>
     <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/"><i class="fab fa-linkedin"></i></a>
     <a href="https://stackoverflow.com/users/12165413/matthew-koukios"><i class="fab fa-stack-overflow"></i></a>
     </div>
