--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
   <footer>
     <h2 style="color: gold; margin-top: 3rem;"> Find me on </h2>
     <br/>
-    <div class="fa-2x ml-4">
-     <a href="https://github.com/mattk24"><i class="fab fa-github" style="--fa-primary-color: black; --fa-secondary-color: white;"></i></a>
-    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/"><i class="fab fa-linkedin"></i></a>
-    <a href="https://stackoverflow.com/users/12165413/matthew-koukios"><i class="fab fa-stack-overflow"></i></a>
+    <div class="fa-2x">
+     <a href="https://github.com/mattk24"><i class="fab fa-github ml-4" style="--fa-primary-color: black; --fa-secondary-color: white;"></i></a>
+    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/"><i class="fab fa-linkedin ml-4"></i></a>
+    <a href="https://stackoverflow.com/users/12165413/matthew-koukios"><i class="fab fa-stack-overflow ml-4"></i></a>
     </div>
    
   </footer>
