--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
     <h2 style="color: gold; margin-top: 3rem;"> Find me on </h2>
     <br/>
     <div class="fa-2x">
-     <a href="https://github.com/mattk24" class="ml-4"><i class="fab fa-github" style="--fa-primary-color: black; --fa-secondary-color: white;"></i></a>
-    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/" class="ml-4"><i class="fab fa-linkedin"></i></a>
-    <a href="https://stackoverflow.com/users/12165413/matthew-koukios" class="ml-4"><i class="fab fa-stack-overflow"></i></a>
+     <a href="https://github.com/mattk24" style="margin-left: 4rem;"><i class="fab fa-github" style="--fa-primary-color: black; --fa-secondary-color: white;"></i></a>
+    <a href="https://www.linkedin.com/in/matthew-koukios-b35123190/" ><i class="fab fa-linkedin"></i></a>
+    <a href="https://stackoverflow.com/users/12165413/matthew-koukios" ><i class="fab fa-stack-overflow"></i></a>
     </div>
    
   </footer>
